--- a/GymManagementSystem/requirements.txt
+++ b/GymManagementSystem/requirements.txt
@@ -12,7 +12,9 @@ constantly==23.10.4
 cryptography==41.0.7
 daphne==4.0.0
 Django==4.2.7
+django-ckeditor==6.7.0
 django-jazzmin==2.6.0
+django-js-asset==2.2.0
 django-mathfilters==1.0.0
 hyperlink==21.0.0
 idna==3.6
